--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3000
 DB_CNN = mongodb+srv://MADNA:madna2001@cafe.4osf9.mongodb.net/test
 JWT_SECRET = hnztqmgy
+GOOGLE_ID =817997186963-ifufs7fs14r32cggh1q7360g0hnmav0a.apps.googleusercontent.com
+SECRET_ID = KIvAZxTYQes1mfIELmvO6AFU
