--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-validator": "^6.10.0",
+        "google-auth-library": "^7.0.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.1",
         "nodemon": "^2.0.7",
